# elasticsearch-agent-chainlit

./: README.md  chainlit.md  pyproject.toml
elasticsearch_chainlit/: config.py  log_init.py
elasticsearch_chainlit/ui/: agent_chainlit.py
